apps/media/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/name: lidarr
  name: lidarr
  namespace: media
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: lidarr
      app.kubernetes.io/name: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: lidarr
        app.kubernetes.io/name: lidarr
    spec:
      containers:
        - name: lidarr
          image: lidarr
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8686
              name: http
              protocol: TCP

          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 10

          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          resources:
            limits:
              memory: 341Mi
            requests:
              cpu: 15m
              memory: 335Mi

          volumeMounts:
            - mountPath: /mnt/media
              name: media
            - mountPath: /mnt/downloads
              name: downloads

      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: smb-media-claim
        - name: downloads
          persistentVolumeClaim:
            claimName: sab-downloads-pvc
